Add PostgreSQL Flexible Server management commands and update documentation
- Introduced PostgreSQL Flexible Server management section in AZURE_CLI_COMMANDS.md with commands for creating, updating, and deleting servers, databases, and firewall rules.
- Updated DOCUMENTATION.md to include PostgreSQL deployment flow and architecture details.
- Added database collection in galaxy.yml for PostgreSQL Flexible Server using Azure CLI commands only.

--- a/collections/azure_factory/database/galaxy.yml
+++ b/collections/azure_factory/database/galaxy.yml
@@ -4,14 +4,17 @@ version: 1.0.0
 readme: README.md
 authors:
   - Azure Factory Team
-description: Azure Factory collection for database resources (SQL Server, PostgreSQL, etc.)
+description: Database services collection for PostgreSQL Flexible Server using Azure CLI commands only
 license_file: LICENSE
 tags:
   - azure
   - database
-  - sql
   - postgresql
-dependencies: {}
+  - flexible-server
+  - azure-cli
+dependencies:
+  azure_factory.core: ">=1.0.0"
+  azure_factory.network: ">=1.0.0"
 repository: https://github.com/your-org/azure-factory
 documentation: https://github.com/your-org/azure-factory
 homepage: https://github.com/your-org/azure-factory
