Refactor playbooks and roles for PostgreSQL and web app management using Azure CLI
- Updated playbooks to include PostgreSQL deployment and destruction processes, ensuring all operations utilize Azure CLI commands only.
- Enhanced test setup script to validate Azure CLI connection and environment variables.
- Refined role tasks for private DNS zone and private endpoint to use Azure CLI commands exclusively.
- Improved error handling and output messages for better clarity during execution.
- Adjusted variable names and configurations for PostgreSQL flexible server to align with naming conventions and best practices.

--- a/collections/azure_factory/app/roles/private_dns_zone/tasks/main.yml
+++ b/collections/azure_factory/app/roles/private_dns_zone/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # Private DNS Zone Role - Main Tasks
-# This role creates a private DNS zone for Web App private endpoints
+# This role creates a private DNS zone for Web App private endpoints using ONLY Azure CLI commands
 
 - name: Validate required variables
   fail:
@@ -11,56 +11,46 @@
     - resource_group_name
     - vnet_name
 
-- name: Check if Private DNS Zone already exists
-  azure.azcollection.azure_rm_privatednszone_info:
-    resource_group: "{{ resource_group_name }}"
-    name: "{{ dns_zone_name }}"
-  register: dns_zone_info
-  when: check_mode is not defined or not check_mode
-
-- name: Create Private DNS Zone
-  azure.azcollection.azure_rm_privatednszone:
-    resource_group: "{{ resource_group_name }}"
-    name: "{{ dns_zone_name }}"
-    tags: "{{ dns_zone_tags | default({}) }}"
-    state: present
-  register: dns_zone_result
-  when: dns_zone_info is not defined or dns_zone_info.exists == false
-
-- name: Update Private DNS Zone if it exists
-  azure.azcollection.azure_rm_privatednszone:
-    resource_group: "{{ resource_group_name }}"
-    name: "{{ dns_zone_name }}"
-    tags: "{{ dns_zone_tags | default({}) }}"
-    state: present
-  register: dns_zone_result
-  when: dns_zone_info is defined and dns_zone_info.exists == true
-
-- name: Get VNet information
-  azure.azcollection.azure_rm_virtualnetwork_info:
-    resource_group: "{{ resource_group_name }}"
-    name: "{{ vnet_name }}"
-  register: vnet_info
-
-- name: Check if DNS Zone is linked to VNet
-  azure.azcollection.azure_rm_privatednszone_info:
-    resource_group: "{{ resource_group_name }}"
-    name: "{{ dns_zone_name }}"
+- name: Check if Private DNS Zone already exists using Azure CLI
+  command: az network private-dns zone show --resource-group "{{ resource_group_name }}" --name "{{ dns_zone_name }}"
   register: dns_zone_check
-  when: check_mode is not defined or not check_mode
+  failed_when: false
+  changed_when: false
 
-- name: Link Private DNS Zone to VNet
-  azure.azcollection.azure_rm_privatednszone:
-    resource_group: "{{ resource_group_name }}"
-    name: "{{ dns_zone_name }}"
-    virtual_network_links:
-      - name: "{{ dns_zone_name }}-link"
-        virtual_network_id: "{{ vnet_info.virtual_networks[0].id }}"
-        registration_enabled: false
-    tags: "{{ dns_zone_tags | default({}) }}"
-    state: present
+- name: Create Private DNS Zone using Azure CLI
+  command: az network private-dns zone create --resource-group "{{ resource_group_name }}" --name "{{ dns_zone_name }}" --tags "{{ dns_zone_tags | default('Project={{ project_name }} Environment={{ env_name }} ManagedBy=Ansible') }}"
   register: dns_zone_result
-  when: dns_zone_check is defined and dns_zone_check.exists == true
+  when: dns_zone_check.rc != 0
+  changed_when: dns_zone_result.rc == 0
+
+- name: Get VNet information using Azure CLI
+  command: az network vnet show --resource-group "{{ resource_group_name }}" --name "{{ vnet_name }}"
+  register: vnet_info
+  changed_when: false
+
+- name: Check if DNS Zone is linked to VNet using Azure CLI
+  command: az network private-dns link vnet list --resource-group "{{ resource_group_name }}" --zone-name "{{ dns_zone_name }}" --query "[?virtualNetwork.id=='{{ (vnet_info.stdout | from_json).id if vnet_info.stdout != '' else '' }}']" -o tsv
+  register: dns_link_check
+  failed_when: false
+  changed_when: false
+  when: vnet_info.stdout != ''
+
+- name: Check if DNS Zone is linked to VNet using Azure CLI (fallback)
+  command: az network private-dns link vnet list --resource-group "{{ resource_group_name }}" --zone-name "{{ dns_zone_name }}" -o tsv
+  register: dns_link_check_fallback
+  failed_when: false
+  changed_when: false
+  when: vnet_info.stdout == ''
+
+- name: Set DNS link check result
+  set_fact:
+    dns_link_check: "{{ dns_link_check_fallback if vnet_info.stdout == '' else dns_link_check }}"
+
+- name: Link Private DNS Zone to VNet using Azure CLI
+  command: az network private-dns link vnet create --resource-group "{{ resource_group_name }}" --zone-name "{{ dns_zone_name }}" --name "{{ dns_zone_name }}-link" --virtual-network "{{ vnet_name }}" --registration-enabled false
+  register: dns_link_result
+  when: dns_link_check.stdout == ""
+  changed_when: dns_link_result.rc == 0
 
 - name: Display Private DNS Zone information
   debug:
@@ -68,11 +58,12 @@
       - "Private DNS Zone: {{ dns_zone_name }}"
       - "Resource Group: {{ resource_group_name }}"
       - "VNet: {{ vnet_name }}"
-      - "Linked: Yes"
+      - "Status: {{ 'Created' if dns_zone_check.rc != 0 else 'Already exists' }}"
+      - "Linked: {{ 'Yes' if dns_link_check.stdout != '' or dns_link_result is defined else 'No' }}"
   when: display_dns_info | default(true)
 
 - name: Set Private DNS Zone facts
   set_fact:
-    dns_zone_id: "{{ dns_zone_result.id }}"
     dns_zone_resource_group: "{{ resource_group_name }}"
     dns_zone_name: "{{ dns_zone_name }}"
+    dns_zone_exists: "{{ dns_zone_check.rc == 0 }}"
