--- a/collections/azure_factory/database/roles/postgresql_private_endpoint/meta/main.yml
+++ b/collections/azure_factory/database/roles/postgresql_private_endpoint/meta/main.yml
@@ -18,5 +18,4 @@ galaxy_info:
     - networking
     - azure-cli
 
-dependencies:
-  - role: azure_factory.database.postgresql_flexible_server
+dependencies: []
