--- a/collections/azure_factory/app/roles/webapp/tasks/main.yml
+++ b/collections/azure_factory/app/roles/webapp/tasks/main.yml
@@ -26,8 +26,8 @@
 - name: Set Web App facts
   set_fact:
     webapp_exists: "{{ webapp_check.rc == 0 }}"
-    webapp_id: "{{ (webapp_result.stdout | from_json).id if webapp_result is defined and webapp_result.changed else (webapp_check.stdout | from_json).id if webapp_check.rc == 0 else '' }}"
-    webapp_default_hostname: "{{ (webapp_result.stdout | from_json).defaultHostName if webapp_result is defined and webapp_result.changed else (webapp_check.stdout | from_json).defaultHostName if webapp_check.rc == 0 else '' }}"
+    webapp_id: "{{ (webapp_result.stdout | from_json).id if webapp_result is defined and webapp_result.changed and webapp_result.stdout != '' else (webapp_check.stdout | from_json).id if webapp_check.rc == 0 and webapp_check.stdout != '' else '' }}"
+    webapp_default_hostname: "{{ (webapp_result.stdout | from_json).defaultHostName if webapp_result is defined and webapp_result.changed and webapp_result.stdout != '' else (webapp_check.stdout | from_json).defaultHostName if webapp_check.rc == 0 and webapp_check.stdout != '' else '' }}"
 
 # User Assigned Managed Identity tasks
 - name: Check if User Assigned Managed Identity already exists
@@ -52,9 +52,9 @@
 - name: Set User Assigned Managed Identity facts
   set_fact:
     uami_exists: "{{ uami_check.rc == 0 }}"
-    uami_id: "{{ (uami_result.stdout | from_json).id if uami_result is defined and uami_result.changed else (uami_check.stdout | from_json).id if uami_check.rc == 0 else '' }}"
-    uami_client_id: "{{ (uami_result.stdout | from_json).clientId if uami_result is defined and uami_result.changed else (uami_check.stdout | from_json).clientId if uami_check.rc == 0 else '' }}"
-    uami_principal_id: "{{ (uami_result.stdout | from_json).principalId if uami_result is defined and uami_result.changed else (uami_check.stdout | from_json).principalId if uami_check.rc == 0 else '' }}"
+    uami_id: "{{ (uami_result.stdout | from_json).id if uami_result is defined and uami_result.changed and uami_result.stdout != '' else (uami_check.stdout | from_json).id if uami_check.rc == 0 and uami_check.stdout != '' else '' }}"
+    uami_client_id: "{{ (uami_result.stdout | from_json).clientId if uami_result is defined and uami_result.changed and uami_result.stdout != '' else (uami_check.stdout | from_json).clientId if uami_check.rc == 0 and uami_check.stdout != '' else '' }}"
+    uami_principal_id: "{{ (uami_result.stdout | from_json).principalId if uami_result is defined and uami_result.changed and uami_result.stdout != '' else (uami_check.stdout | from_json).principalId if uami_check.rc == 0 and uami_check.stdout != '' else '' }}"
   when: enable_user_assigned_identity | default(false)
 
 - name: Assign User Assigned Managed Identity to Web App
